@@ -86,7 +86,7 @@ FILE_VERSION_FILTER    =
 QUIET                  = NO
 WARNINGS               = YES
 WARN_IF_UNDOCUMENTED   = NO
-WARN_IF_DOC_ERROR      = NO
+WARN_IF_DOC_ERROR      = YES
 WARN_NO_PARAMDOC       = NO
 WARN_FORMAT            = "$file:$line: $text"
 WARN_LOGFILE           = ./tutorial/doxygen-error.log
@@ -98,7 +98,7 @@ FILE_PATTERNS          = *.doxygen
 RECURSIVE              = YES
 EXCLUDE                = ./tutorial/.svn/ ./tutorial/latex_output/
 EXCLUDE_SYMLINKS       = NO
-EXAMPLE_PATH           = 
+EXAMPLE_PATH           = ../source/EXAMPLES/
 EXAMPLE_PATTERNS       = 
 EXAMPLE_RECURSIVE      = NO
 IMAGE_PATH             = ./tutorial/images/
