@@ -38,11 +38,23 @@
 \pagenumbering{arabic}
 \section{Open\-MS Tutorial}
 
-This tutorial is intended for bla, bla, bla
+This tutorial gives an introduction to the OpenMS core datastructures and algorithms.
+It is intended to allow for a quick start in writing your own applications based on
+the OpenMS framework.
+
+The structure of this tutorial is similar to the modules of the class documentation.
+First, the basic concepts and datastructures of OpenMS are explained. The next chapter is
+about the kernel datastructures. These datastructures represent the actual mass spectronomy
+data: raw data, peaks, spectra and maps. In the following chapters the more sophisticated 
+datastructures and algorithms, e.g. used for peak picking, feature finding and identification
+are presended.
 
 \pagebreak
-\input{tutorial_kernel}
+\input{tutorial_concept}
 \pagebreak
 \input{tutorial_datastructures}
+\pagebreak
+\input{tutorial_kernel}
+
 
 \end{document}
